--- a/script/config.properties
+++ b/script/config.properties
@@ -1,41 +1,34 @@
-
-
-
-protocal=http
-domain=localhost
-port=1328
+[DEFAULT]
+# 项目名
 project_name=data
+
+# 数据体名
 data_name=data
 
-# 如不指定 URL 名，则 URL 名为 data_name 的全小写无分隔符形式
-# url_name=data
+# 生成的文件名
+output_name_1=1-Common层.txt
+output_name_2=2-Controller层.txt
+output_name_3=3-Service层.txt
+output_name_4=4-Mapper层.txt
+output_name_5=5-MyBatis文件.txt
+output_name_6=6-数据库搭建SQL.txt
 
-# 如不指定类名，则类名为  data_name 的大驼峰命名形式
-# class_name=Data
+# 上面必选，下面可选
+# 下面如果不指定，就把整行注释掉或删掉，不能让值为空
 
-# 如不指定对象名，则对象名为  data_name 的小驼峰命名形式
-# object_name=data
+# 如不指定类名，则类名为 data_name 的大驼峰命名形式
+class_name=Data
 
-# 如不指定数据表名，则数据表为  data_name 的下划线命名形式
+# 如不指定对象名，则对象名为 data_name 的小驼峰命名形式
+object_name=data
+
+# 如不指定数据表名，则数据表为 data_name 的下划线命名形式
 table_name=data_table
+
+# 按顺序指定 JSON 键名对应的 Java 属性名和数据名字段名
+# 如不指定，则Java 属性名和数据名字段名分别为JSON 键名的驼峰命名形式和下划线命名形式
+java_attrs=id,attr1,attr2
+sql_fields=id,field1,field2
 
 # 可以指定主键，若无主键，则查询、删除等函数则根据第一个字段进行查找
 primary_key_name=id
-
-# 可以手动指定 JSON 里每一个键对应的 Java 属性名和数据表字段名
-# 如不指定（将下面几行删掉），则 Java 属性名遵从驼峰命名法，数据表字段遵从下划线命名法
-java_attr_1=id
-java_attr_2=attr1
-java_attr_3=attr2
-sql_field_1=id
-sql_field_2=field1
-sql_field_3=field2
-
-input_name=demo.json
-output_name_1=1-Common层.txt
-output_name_2=2-Controller层.txt
-output_name_3=3-Mapper层.txt
-output_name_4=4-Service层.txt
-output_name_5=5-MyBatis文件.txt
-output_name_6=6-数据库搭建SQL.txt
-output_name_7=7-请求URL.txt
