--- a/script/config.properties
+++ b/script/config.properties
@@ -1,9 +1,18 @@
 [DEFAULT]
-# 项目名
-project_name=data
+# 组件名，如出现在xxxService.java
+module_name=data
 
-# 数据体名
+# 数据体名，如果类名、对象名、数据表名没有指定的话，则根据不同命名法将数据体名进行转换
 data_name=data
+
+# 输入的文件名，目前只支持 .json 和 .txt
+input_name=input.json
+# 如果是 .txt 文件，则可以指定每行的分隔符，分割成列表后的键与值的下标，值可以作为注释
+delimiter=" "
+json_key_index=0
+json_value_index=1
+# 是否根据 .json 中的值或 .txt 对应下标的字符串生成 SQL 中的注释
+add_comment=true
 
 # 生成的文件名
 output_name_1=1-Common层.txt
