优化命名逻辑，增强代码复用，增强测试接口，增加部分功能，矫正部分漏洞，移除部分脚本

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath />
 	</parent>
 
-	<groupId>com.springboot</groupId>
+	<groupId>dreature.smct</groupId>
 	<artifactId>springboot-mybatis-crud-template</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>springboot-mybatis-crud-template</name>
 
 	<dependencies>
@@ -62,9 +62,19 @@
 <!--		</dependency>-->
 		<!-- JSON 处理 -->
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.47</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.17.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.17.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.17.0</version>
 		</dependency>
 		<!-- hutool 工具包 -->
 <!--		<dependency>-->
@@ -73,11 +83,23 @@
 <!--			<version>5.8.15</version>-->
 <!--		</dependency>-->
 		<!-- common-lang3 工具包 -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.commons</groupId>-->
+<!--			<artifactId>commons-lang3</artifactId>-->
+<!--			<version>3.4</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>junit</groupId>-->
+<!--			<artifactId>junit</artifactId>-->
+<!--			<version>4.11</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter</artifactId>-->
+<!--			<version>RELEASE</version>-->
+<!--			<scope>compile</scope>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<!-- Spring Boot 打包 -->
