--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # port
-server.port=1328
+server.port=<local port>
 # database driver
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # database related configuration
@@ -9,14 +9,8 @@ spring.datasource.username=<username of database>
 # your password to database
 spring.datasource.password=<password to database>
 
-# pool
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.initialSize=5
-#spring.datasource.maxActive=50
-#spring.datasource.maxIdle=10
-#spring.datasource.minIdle=5
 # MyBatis
-mybatis.typeAliasesPackage=com.springboot.data.common
+mybatis.typeAliasesPackage=dreature.smct.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
 mybatis.configuration.cacheEnabled=false
