--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>2.7.18</version>
         <relativePath/>
     </parent>
 
-    <groupId>dreature.smct</groupId>
+    <groupId>xyz.dreature.smct</groupId>
     <artifactId>springboot-mybatis-crud-template</artifactId>
-    <version>1.1</version>
+    <version>1.2.0</version>
     <name>springboot-mybatis-crud-template</name>
 
     <dependencies>
@@ -26,80 +26,51 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!-- Spring Boot 测试依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- JDBC 相关依赖 -->
+        <!-- Spring Boot JDBC 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-        <!-- MySQL 驱动依赖 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <!-- Spring Boot 整合 MyBatis 所需依赖 -->
+        <!-- Spring Boot MyBatis 依赖 -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
+            <version>2.3.2</version>
         </dependency>
-        <!-- Spring Boot 整合 MyBatis Plus 所需依赖 -->
-        <!--		<dependency>-->
-        <!--			<groupId>com.baomidou</groupId>-->
-        <!--			<artifactId>mybatis-plus-boot-starter</artifactId>-->
-        <!--			<version>3.5.2</version>-->
-        <!--		</dependency>-->
-        <!-- Lombok 依赖，用于大幅减少 Java 模板代码 -->
-        <!--		<dependency>-->
-        <!--			<groupId>org.projectlombok</groupId>-->
-        <!--			<artifactId>lombok</artifactId>-->
-        <!--			<version>1.16.10</version>-->
-        <!--		</dependency>-->
-        <!-- JSON 处理 -->
+        <!--        &lt;!&ndash; MyBatis Plus 依赖 &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.baomidou</groupId>-->
+        <!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
+        <!--            <version>3.5.12</version>-->
+        <!--        </dependency>-->
+        <!-- MySQL 驱动依赖 -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.17.0</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
         </dependency>
+        <!-- Spring Boot MQ 依赖-->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.17.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <!-- Spring Boot 测试依赖 -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.17.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-        <!-- hutool 工具包 -->
-        <!--		<dependency>-->
-        <!--			<groupId>cn.hutool</groupId>-->
-        <!--			<artifactId>hutool-all</artifactId>-->
-        <!--			<version>5.8.15</version>-->
-        <!--		</dependency>-->
-        <!-- common-lang3 工具包 -->
-        <!--		<dependency>-->
-        <!--			<groupId>org.apache.commons</groupId>-->
-        <!--			<artifactId>commons-lang3</artifactId>-->
-        <!--			<version>3.4</version>-->
-        <!--		</dependency>-->
-        <!--		<dependency>-->
-        <!--			<groupId>junit</groupId>-->
-        <!--			<artifactId>junit</artifactId>-->
-        <!--			<version>4.11</version>-->
-        <!--			<scope>test</scope>-->
-        <!--		</dependency>-->
-        <!--		<dependency>-->
-        <!--			<groupId>org.junit.jupiter</groupId>-->
-        <!--			<artifactId>junit-jupiter</artifactId>-->
-        <!--			<version>RELEASE</version>-->
-        <!--			<scope>compile</scope>-->
-        <!--		</dependency>-->
+        <!--        &lt;!&ndash;  Lombok 依赖 &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.projectlombok</groupId>-->
+        <!--            <artifactId>lombok</artifactId>-->
+        <!--            <version>1.18.38</version>-->
+        <!--        </dependency>-->
+        <!--        &lt;!&ndash; Hutool 工具包 &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>cn.hutool</groupId>-->
+        <!--            <artifactId>hutool-all</artifactId>-->
+        <!--            <version>5.8.38</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <!-- Spring Boot 打包 -->
