--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
-# port
+# ----- Application Configuration -----
+# Spring Boot application port
 server.port=<local port>
-# database driver
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# database related configuration
-spring.datasource.url=jdbc:mysql://<domain>:<port>/<name of database>?autoReconnect=true&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai&useSSL=false&allowMultiQueries=true
-# your username of database
-spring.datasource.username=<username of database>
-# your password to database
-spring.datasource.password=<password to database>
 
-# MyBatis
-mybatis.typeAliasesPackage=dreature.smct.entity
+# ----- Database Configuration -----
+# MySQL JDBC driver class
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Database connection URL with parameters
+spring.datasource.url=jdbc:mysql://<db_host>:3306/<db_name>?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+# Database username
+spring.datasource.username=<db_username>
+# Database password
+spring.datasource.password=<db_password>
+
+# ----- MyBatis Configuration -----
+# Package for entity type aliases
+mybatis.typeAliasesPackage=xyz.dreature.smct.entity
+# Location of MyBatis mapper XML files
 mybatis.mapperLocations=classpath:mapper/*.xml
+# Enable/Disable underscore to camelCase mapping
 mybatis.configuration.mapUnderscoreToCamelCase=true
+# Enable/Disable second-level cache
 mybatis.configuration.cacheEnabled=false
