扩充数据映射，优化代码逻辑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=<db_password>
 
 # ----- MyBatis Configuration -----
 # Package for entity type aliases
-mybatis.typeAliasesPackage=xyz.dreature.smct.entity
+mybatis.typeAliasesPackage=xyz.dreature.smct.common.entity
 # Location of MyBatis mapper XML files
 mybatis.mapperLocations=classpath:mapper/*.xml
 # Enable/Disable underscore to camelCase mapping
