检验部分参数、声明事务控制

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 # Spring Boot application port
 server.port=<local port>
 
+# ===== Log Configuration =====
+# Log level
+logging.level.xyz.dreature.smit=debug
+
 # ----- Database Configuration -----
 # MySQL JDBC driver class
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,3 +25,6 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
 # Enable/Disable second-level cache
 mybatis.configuration.cacheEnabled=false
+
+# ===== Custom Configuration =====
+app.file.path=scripts/mock_data.json
