--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!-- Spring Boot JDBC 依赖 -->
+        <!-- Spring Boot Validation 依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <!-- Spring Boot MyBatis 依赖 -->
         <dependency>
@@ -49,28 +49,23 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
         </dependency>
-        <!-- Spring Boot MQ 依赖-->
+        <!--  Lombok 依赖 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
         </dependency>
-        <!-- Spring Boot 测试依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <!--        &lt;!&ndash;  Lombok 依赖 &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.projectlombok</groupId>-->
-        <!--            <artifactId>lombok</artifactId>-->
-        <!--            <version>1.18.38</version>-->
-        <!--        </dependency>-->
         <!--        &lt;!&ndash; Hutool 工具包 &ndash;&gt;-->
         <!--        <dependency>-->
         <!--            <groupId>cn.hutool</groupId>-->
         <!--            <artifactId>hutool-all</artifactId>-->
         <!--            <version>5.8.38</version>-->
         <!--        </dependency>-->
+        <!-- Spring Boot 测试依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- Spring Boot 打包 -->
