--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>xyz.dreature.smct</groupId>
     <artifactId>springboot-mybatis-crud-template</artifactId>
-    <version>1.3.0</version>
+    <version>1.4.0</version>
     <name>springboot-mybatis-crud-template</name>
 
     <dependencies>
@@ -41,7 +41,7 @@
         <!--        <dependency>-->
         <!--            <groupId>com.baomidou</groupId>-->
         <!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
-        <!--            <version>3.5.12</version>-->
+        <!--            <version>3.5.15</version>-->
         <!--        </dependency>-->
         <!-- MySQL 驱动依赖 -->
         <dependency>
@@ -53,14 +53,20 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.38</version>
+            <version>1.18.42</version>
         </dependency>
-        <!--        &lt;!&ndash; Hutool 工具包 &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>cn.hutool</groupId>-->
-        <!--            <artifactId>hutool-all</artifactId>-->
-        <!--            <version>5.8.38</version>-->
-        <!--        </dependency>-->
+        <!--  Hutool 核心工具包依赖 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.43</version>
+        </dependency>
+        <!-- Spring Doc OpenAPI 依赖 -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.8.0</version>
+        </dependency>
         <!-- Spring Boot 测试依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
