--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,28 @@
-# ----- Application Configuration -----
+# ===== Application Configuration ====
 # Spring Boot application port
 server.port=<local port>
 
 # ===== Log Configuration =====
 # Log level
-logging.level.xyz.dreature.smit=debug
+logging.level.xyz.dreature.smct=debug
 
-# ----- Database Configuration -----
-# MySQL JDBC driver class
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Database connection URL with parameters
-spring.datasource.url=jdbc:mysql://<db_host>:3306/<db_name>?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
-# Database username
+# ===== Spring Doc Configuration =====
+# Swagger UI API documentation URL
+springdoc.swagger-ui.url=/v3/api-docs
+# API documentation endpoint path
+springdoc.api-docs.path=/v3/api-docs
+# Swagger UI interface path
+springdoc.swagger-ui.path=/swagger-ui.html
+# Swagger UI enabled status
+springdoc.swagger-ui.enabled=true
+
+# ===== Database Configuration =====
+spring.datasource.url=jdbc:mysql://<db_host>:3306/<db_name>?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=<db_username>
-# Database password
 spring.datasource.password=<db_password>
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ----- MyBatis Configuration -----
+# ===== MyBatis Configuration =====
 # Package for entity type aliases
 mybatis.typeAliasesPackage=xyz.dreature.smct.common.entity
 # Location of MyBatis mapper XML files
